--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                     <div class = "company ">
                     <div id = "select-company">
                         <label class="form-check-label" for="flexRadioDefault1">
-                            <img src = "./media/400-200 01.png" alt = "Nexus-logo" class="img-fluid" id = "nexus">
+                            <img src = "./400-200 01.png" alt = "Nexus-logo" class="img-fluid" id = "nexus">
                         </label>
                         <input class="form-check-input" type="radio" name="companyName" id="flexRadioDefault1" value = "Nexus">
                     </div>
                     <div id = "select-company">
                         <label class="form-check-label" for="flexRadioDefault2">
-                            <img src = "./media/400-200 02.png" alt = "Grameenext-logo" class="img-fluid" id = "grameenext">
+                            <img src = "./400-200 02.png" alt = "Grameenext-logo" class="img-fluid" id = "grameenext">
                         </label>
                         <input class="form-check-input" type="radio" name="companyName" id="flexRadioDefault2" value = "Grameenext">
                     </div>
