--- a/form6.html
+++ b/form6.html
@@ -17,7 +17,7 @@
         <div class="form-container col-xl-9 col-md">
             <div class="heading"><h4>Overall Satisfaction</h4></div>
             <form action="form7.html">
-                <div class="input-section-6">
+                <div class="input-section-6 row">
                     <label for="floatingTextarea1" class = "col-lg-4 col-md"><p class = "name">Overall, how satisfied are you working at NEXUS / GRAMEENEXT ? </p></label>
                     <div class="form-floating col-lg-7 col-md">
                         <div id = "form-6-textarea">
@@ -25,7 +25,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="input-section-6">
+                <div class="input-section-6 row">
                     <label for="floatingTextarea2" class = "col-lg-4 col-md"><p class = "name">What do you enjoy most about working here?</p></label>
                     <div class="form-floating col-lg-7 col-md " id = "form-6-textarea">
                         <div id = "form-6-textarea">
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="input-section-6">
+                <div class="input-section-6 row">
                     <label for="floatingTextarea3" class = "col-lg-4 col-md"><p class = "name">What areas do you think need improvement?</p></label>
                     <div class="form-floating col-lg-7 col-md">
                         <div id = "form-6-textarea">
