--- a/thankYou.html
+++ b/thankYou.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="thankyou-container d-flex flex-column align-items-center justify-content-center">
+    <div class="thankyou-container d-flex align-items-center justify-content-center">
         <div class = "col-lg-6 thankyou-items">
             <h1>Thank you for completing the survey! Your feedback is valuable to us.</h1>
             <span style='font-size:100px;'>&#128522;</span>
