--- a/form2.html
+++ b/form2.html
@@ -12,10 +12,10 @@
     <title>Employee Survey Form</title>
 </head>
 <body id = "body-container">
-    <div class="container container-form-2">
+    <div class="container">
         <div class="form-container col-xl-9 col-md">
-        <div class="heading"><h4>Section 2 - Work Environment</h4></div>
         <form action = "form3.html">
+        <div class="heading"><h4>Section 2 - Work Environment</h4></div>
         <div class="form-items">
             <div class = "input-section-2 row">
                 <label for="customRange1" class="form-label name col-lg-3 col-md">I can express my thoughts and ideas at work</label>
