--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
                 <div class = "name col-lg-3 col-md"><label for = "name">Enter your Name</label></div>
                     <input type="text" class="form-control col-lg col-sm" placeholder="Full Name" aria-label="Username" class = "username" id = "name">
                 </div>
-                    <div class = "input-section">
+                    <div class = "input-section row">
                     <div class = "name col-lg-3 col-md"><label>Which Company ?</label></div>
                     <div class = "company ">
                     <div id = "select-company">
                         <label class="form-check-label" for="flexRadioDefault1">
-                            <img src = "./400-200 01.png" alt = "Nexus-logo" class="img-fluid" id = "nexus">
+                            <img src = "./media/400-200 01.png" alt = "Nexus-logo" class="img-fluid" id = "nexus">
                         </label>
                         <input class="form-check-input" type="radio" name="companyName" id="flexRadioDefault1" value = "Nexus">
                     </div>
                     <div id = "select-company">
                         <label class="form-check-label" for="flexRadioDefault2">
-                            <img src = "./400-200 02.png" alt = "Grameenext-logo" class="img-fluid" id = "grameenext">
+                            <img src = "./media/400-200 02.png" alt = "Grameenext-logo" class="img-fluid" id = "grameenext">
                         </label>
                         <input class="form-check-input" type="radio" name="companyName" id="flexRadioDefault2" value = "Grameenext">
                     </div>
