--- a/form7.html
+++ b/form7.html
@@ -13,8 +13,8 @@
     <title>Employee Survey Form</title>
 </head>
 <body id = "body-container">
-    <div class="container container-form-2">
-        <div class="form-container col-xl-9 col-md">
+    <div class="container" >
+        <div class="form-container form-container-7 col-xl-9 col-md">
             <form action="thankYou.html">
             <div class="heading"><h4>Additional Comments</h4>
             <p class = "comments">Please provide any additional comments or suggestions you have for improving the work environment, culture, or any other aspect of your experience at NEXUS / GRAMEENEXT </p>
