--- a/form7.html
+++ b/form7.html
@@ -24,7 +24,7 @@
                     <textarea class="form-control" placeholder="Got something to add? We're all ears! Share your thoughts below..." id="floatingTextarea" style="height: 200px"></textarea>
                     </div>
                   </div>
-                <button class="btn btn-primary" type="submit" id = "proceedButton">Submit</button>
+                <button class="btn btn-primary" type="submit" id = "submit">Submit</button>
             </form>
         </div>
     </div>
