--- a/form2.html
+++ b/form2.html
@@ -13,43 +13,97 @@
 </head>
 <body id = "body-container">
     <div class="container">
-        <div class="form-container col-xl-9 col-md">
-        <form action = "form3.html">
-        <div class="heading"><h4>Section 2 - Work Environment</h4></div>
-        <div class="form-items">
-            <div class = "input-section-2 row">
-                <label for="customRange1" class="form-label name col-lg-3 col-md">I can express my thoughts and ideas at work</label>
-                <div class = "input-range col-lg col-sm">
-                <div class = "d-flex justify-content-between"><p>0</p><p>50</p><p>100</p></div>
-                <input type="range" class="form-range" id="customRange1" name = "Q1">
+        <div class="container">
+            <div class="form-container col-xl-10 col-md">
+            <h4>Section 2 - Work Environment</h4>
+            <form action = "">
+            <div class="form-items">
+                <div class = "input-section-2 row">
+                    <label for="customRange1" class="form-label name col-lg-3 col-md">I can express my thoughts and ideas at work</label>
+                    <div class = "input-range col-lg col-sm">
+                        <div class="range">
+                            <div class="sliderValue">
+                              <span style="font-size: 50px;" class ="slider-span">10</span>
+                            </div>
+                            <div class="field">
+                                <div class="value left">0</div>
+                                <input type="range" min="0" max="10" value="5" steps="1" name = "Q1" class = "slider-input">
+                                <div class="value right">10</div>
+                            </div>
+                        </div>    
+                    </div>
                 </div>
+                <div class = "input-section-2 row">
+                    <label for="customRange2" class="form-label name col-lg-3 col-md">I like the office workspace area</label>
+                        <div class = "input-range col-lg col-sm">
+                            <div class="range">
+                                <div class="sliderValue">
+                                  <span style="font-size: 50px;" class ="slider-span">10</span>
+                                </div>
+                                <div class="field">
+                                    <div class="value left">0</div>
+                                    <input type="range" min="0" max="10" value="5" steps="1" class = "slider-input" name = "Q2">
+                                    <div class="value right">10</div>
+                                </div>
+                            </div>    
+                        </div>
             </div>
-            <div class = "input-section-2 row">
-                <label for="customRange2" class="form-label name col-lg-3 col-md">I like the office workspace area</label>
-                <div class = "input-range col-lg col-sm">
-                <div class = "d-flex justify-content-between"><p>0</p><p>50</p><p>100</p></div>
-                <input type="range" class="form-range" id="customRange2" name = "Q2">
+    
+                <div class = "input-section-2 row">
+                    <label for="customRange3" class="form-label name col-lg-3 col-md">I have a healthy work-life balance.</label>
+                        <div class = "input-range col-lg col-sm">
+                            <div class="range">
+                                <div class="sliderValue">
+                                  <span style="font-size: 50px;" class ="slider-span">10</span>
+                                </div>
+                                <div class="field">
+                                    <div class="value left">0</div>
+                                    <input type="range" min="0" max="10" value="5" steps="1" class = "slider-input" name = "Q3">
+                                    <div class="value right">10</div>
+                                </div>
+                            </div>    
+                        </div>
                 </div>
-            </div>
-            <div class = "input-section-2 row">
-                <label for="customRange3" class="form-label name col-lg-3 col-md">I have a healthy work-life balance.</label>
-                <div class = "input-range col-lg col-sm">
-                <div class = "d-flex justify-content-between"><p>0</p><p>50</p><p>100</p></div>
-                <input type="range" class="form-range" id="customRange3" name = "Q3">
+                <div class = "input-section-2 row">
+                    <label for="customRange4" class="form-label name col-lg-3 col-md">I can communicate within my team and colleagues effectively.</label>
+                    <div class = "input-range col-lg col-sm">
+                            <div class="range">
+                                <div class="sliderValue">
+                                  <span style="font-size: 50px;" class ="slider-span">10</span>
+                                </div>
+                                <div class="field">
+                                    <div class="value left">0</div>
+                                    <input type="range" min="0" max="10" value="5" steps="1" class = "slider-input" name = "Q4">
+                                    <div class="value right">10</div>
+                                </div>
+                            </div>
+                    </div>
                 </div>
+                <button class="btn btn-primary" type="submit" id = "proceedButton">Proceed</button>
+            </form>
             </div>
-            <div class = "input-section-2 row">
-                <label for="customRange4" class="form-label name col-lg-3 col-md">I can communicate within my team and colleagues effectively.</label>
-                <div class = "input-range col-lg col-sm">
-                <div class = "d-flex justify-content-between"><p>0</p><p>50</p><p>100</p></div>
-                <input type="range" class="form-range" id="customRange4" name = "Q4">
-                </div>
-            </div>
-            <button class="btn btn-primary" type="submit" id = "proceedButton">Proceed</button>
         </div>
-        </form>
-        </div>
-    </div>
+        <script>
+            for(i=0;i<4;i++){
+                const slideValue = document.getElementsByClassName("slider-span")[i];
+                const inputSlider = document.getElementsByClassName("slider-input")[i];
+                emoji_array=["😡","😠","😦","☹️","🙁","😐","🙂","😊","😄","😃","😍"];
+                slideValue.textContent = emoji_array[5];
+                inputSlider.oninput = (()=>{
+                let value = inputSlider.value;
+                slideValue.textContent = emoji_array[value];
+                console.log(value);
+                console.log(slideValue);
+                if(value==0){
+                    slideValue.style.left = "10%";    
+                }else{
+                    slideValue.style.left = (value*10) + "%";   
+                }
+                slideValue.classList.add("show");
+                });
+            }
+    
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
