--- a/form2.html
+++ b/form2.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="form-container col-xl-10 col-md">
             <form action = "form3.html">
-            <h4>Section 2 - Work Environment</h4>
+            <div class="heading"><h4>Section 2 - Work Environment</h4></div>
             <div class="form-items">
                 <div class = "input-section-2 row">
                     <label for="customRange1" class="form-label name col-lg-3 col-md">I can express my thoughts and ideas at work</label>
