--- a/form2.html
+++ b/form2.html
@@ -12,7 +12,6 @@
     <title>Employee Survey Form</title>
 </head>
 <body id = "body-container">
-    <div class="container">
         <div class="container">
             <div class="form-container col-xl-10 col-md">
             <form action = "form3.html">
@@ -84,26 +83,25 @@
             </div>
         </div>
         <script>
-        for(i=0;i<4;i++){
-            const slideValue = document.getElementsByClassName("slider-span")[i];
-            const inputSlider = document.getElementsByClassName("slider-input")[i];
-            emoji_array=["😡","😠","😦","☹️","🙁","😐","🙂","😊","😄","😃","😍"];
-            slideValue.textContent = emoji_array[5];
-            inputSlider.oninput = (()=>{
-            let value = inputSlider.value;
-            slideValue.textContent = emoji_array[value];
-            console.log(value);
-            console.log(slideValue);
-            if(value==0){
-                slideValue.style.left = "1%";    
+            for(i=0;i<4;i++){
+                const slideValue = document.getElementsByClassName("slider-span")[i];
+                const inputSlider = document.getElementsByClassName("slider-input")[i];
+                emoji_array=["😡","😠","😦","☹️","🙁","😐","🙂","😊","😄","😃","😍"];
+                slideValue.textContent = emoji_array[5];
+                inputSlider.oninput = (()=>{
+                let value = inputSlider.value;
+                slideValue.textContent = emoji_array[value];
+                console.log(value);
+                console.log(slideValue);
+                if(value==0){
+                    slideValue.style.left = "1%";    
+                }else{
+                    slideValue.style.left = (value*10) + "%";   
+                }
+                slideValue.classList.add("show");
+                });
             }
-            else{
-                slideValue.style.left = (value*10) + "%";   
-            }
-            slideValue.classList.add("show");
-            });
-        }
-
+    
         </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
