--- a/form6.html
+++ b/form6.html
@@ -13,7 +13,7 @@
     <title>Employee Survey Form</title>
 </head>
 <body id = "body-container">
-    <div class="container container-form-2">
+    <div class="container">
         <div class="form-container col-xl-9 col-md">
             <form action="form7.html">
             <div class="heading"><h4>Overall Satisfaction</h4></div>
