--- a/form2.html
+++ b/form2.html
@@ -15,10 +15,12 @@
         <div class="container">
             <div class="form-container col-xl-10 col-md">
             <form action = "form3.html">
-            <div class="heading"><h4>Section 2 - Work Environment</h4></div>
+            <div class="heading"><h4>
+                <!-- Section 2 -  -->
+                Work Environment</h4></div>
             <div class="form-items">
                 <div class = "input-section-2 row">
-                    <label for="customRange1" class="form-label name col-lg-3 col-md">I can express my thoughts and ideas at work</label>
+                    <p class="name col-lg-5 col-md">I am able to express my thoughts and ideas at work.</p>
                     <div class = "input-range col-lg col-sm">
                         <div class="range">
                             <div class="sliderValue">
@@ -33,7 +35,7 @@
                     </div>
                 </div>
                 <div class = "input-section-2 row">
-                    <label for="customRange2" class="form-label name col-lg-3 col-md">I like the office workspace area</label>
+                    <p class="name col-lg-5 col-md">I like the office workspace area</p>
                         <div class = "input-range col-lg col-sm">
                             <div class="range">
                                 <div class="sliderValue">
@@ -47,9 +49,8 @@
                             </div>    
                         </div>
             </div>
-    
                 <div class = "input-section-2 row">
-                    <label for="customRange3" class="form-label name col-lg-3 col-md">I have a healthy work-life balance.</label>
+                    <p class="name col-lg-5 col-md">My work-life balance is healthy.</p>
                         <div class = "input-range col-lg col-sm">
                             <div class="range">
                                 <div class="sliderValue">
@@ -64,7 +65,7 @@
                         </div>
                 </div>
                 <div class = "input-section-2 row">
-                    <label for="customRange4" class="form-label name col-lg-3 col-md">I can communicate within my team and colleagues effectively.</label>
+                    <p class="name col-lg-5 col-md">I am able to communicate effectively with my team and colleagues.</p>
                     <div class = "input-range col-lg col-sm">
                             <div class="range">
                                 <div class="sliderValue">
