--- a/form5.html
+++ b/form5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="star.css">
+    <link rel="stylesheet" href="emoji.css">
     <link rel="stylesheet" href="form.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,98 +16,78 @@
         <div class="container container-form-2">
             <div class="form-container col-xl-9 col-md">
             <form action="form6.html">
-                <div class="heading"><h4>Section 5 Compensation and Benefits</h4></div>
+                <div class="heading"><h4>
+                    <!-- Section 5  -->
+                    Compensation and Benefits</h4></div>
                     <div class="input-section-5 row">
                         <p class="s4-name col-lg-5 col-md col-sm">I am satisfied with my current salary and benefits.</p>
-                        <div class = "col-md col-sm"id="half-stars-example">
-                            <div class="rating-group">
-                                <input class="rating__input rating__input--none" name="Q12-rating" id="Q12-rating2-0" value="0" type="radio">
-                                <label aria-label="0 stars" class="rating__label" for="Q12-rating2-0">&nbsp;</label>
-                                <label aria-label="0.5 stars" class="rating__label rating__label--half" for="Q12-rating2-05"><i class="rating__icon rating__icon--star fa fa-star-half"></i></label>
-                                <input class="rating__input" name="Q12-rating" id="Q12-rating2-05" value="0.5" type="radio">
-                                <label aria-label="1 star" class="rating__label" for="Q12-rating2-10"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
-                                <input class="rating__input" name="Q12-rating" id="Q12-rating2-10" value="1" type="radio">
-                                <label aria-label="1.5 stars" class="rating__label rating__label--half" for="Q12-rating2-15"><i class="rating__icon rating__icon--star fa fa-star-half"></i></label>
-                                <input class="rating__input" name="Q12-rating" id="Q12-rating2-15" value="1.5" type="radio">
-                                <label aria-label="2 stars" class="rating__label" for="Q12-rating2-20"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
-                                <input class="rating__input" name="Q12-rating" id="Q12-rating2-20" value="2" type="radio">
-                                <label aria-label="2.5 stars" class="rating__label rating__label--half" for="Q12-rating2-25"><i class="rating__icon rating__icon--star fa fa-star-half"></i></label>
-                                <input class="rating__input" name="Q12-rating" id="Q12-rating2-25" value="2.5" type="radio" checked>
-                                <label aria-label="3 stars" class="rating__label" for="Q12-rating2-30"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
-                                <input class="rating__input" name="Q12-rating" id="Q12-rating2-30" value="3" type="radio">
-                                <label aria-label="3.5 stars" class="rating__label rating__label--half" for="Q12-rating2-35"><i class="rating__icon rating__icon--star fa fa-star-half"></i></label>
-                                <input class="rating__input" name="Q12-rating" id="Q12-rating2-35" value="3.5" type="radio">
-                                <label aria-label="4 stars" class="rating__label" for="Q12-rating2-40"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
-                                <input class="rating__input" name="Q12-rating" id="Q12-rating2-40" value="4" type="radio">
-                                <label aria-label="4.5 stars" class="rating__label rating__label--half" for="Q12-rating2-45"><i class="rating__icon rating__icon--star fa fa-star-half"></i></label>
-                                <input class="rating__input" name="Q12-rating" id="Q12-rating2-45" value="4.5" type="radio">
-                                <label aria-label="5 stars" class="rating__label" for="Q12-rating2-50"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
-                                <input class="rating__input" name="Q12-rating" id="Q12-rating2-50" value="5" type="radio">
+                            <div class = "input-range col-lg col-sm">
+                                <div class="range">
+                                    <div class="sliderValue">
+                                      <span style="font-size: 50px;" class ="slider-span">10</span>
+                                    </div>
+                                    <div class="field">
+                                        <div class="value left">0</div>
+                                        <input type="range" min="0" max="10" value="5" steps="1" name = "Q12" class = "slider-input">
+                                        <div class="value right">10</div>
+                                    </div>
+                                </div>    
                             </div>
+                    </div>
+                    <div class="input-section-5 row">
+                        <p class="s4-name col-lg-5 col-md col-sm">I feel acknowledged and rewarded by the company for my outstanding performance.</p>
+                        <div class = "input-range col-lg col-sm">
+                            <div class="range">
+                                <div class="sliderValue">
+                                  <span style="font-size: 50px;" class ="slider-span">10</span>
+                                </div>
+                                <div class="field">
+                                    <div class="value left">0</div>
+                                    <input type="range" min="0" max="10" value="5" steps="1" name = "Q13" class = "slider-input">
+                                    <div class="value right">10</div>
+                                </div>
+                            </div>    
                         </div>
                     </div>
                     <div class="input-section-5 row">
-                        <p class="s4-name col-lg-5 col-md col-sm">I feel recognized and rewarded by the company for my good performance.</p>
-                        <div class = "col-md col-sm" id="half-stars-example">
-                            <div class="rating-group">
-                                <input class="rating__input rating__input--none" name="Q13-rating" id="Q13-rating2-0" value="0" type="radio">
-                                <label aria-label="0 stars" class="rating__label" for="Q13-rating2-0">&nbsp;</label>
-                                <label aria-label="0.5 stars" class="rating__label rating__label--half" for="Q13-rating2-05"><i class="rating__icon rating__icon--star fa fa-star-half"></i></label>
-                                <input class="rating__input" name="Q13-rating" id="Q13-rating2-05" value="0.5" type="radio">
-                                <label aria-label="1 star" class="rating__label" for="Q13-rating2-10"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
-                                <input class="rating__input" name="Q13-rating" id="Q13-rating2-10" value="1" type="radio">
-                                <label aria-label="1.5 stars" class="rating__label rating__label--half" for="Q13-rating2-15"><i class="rating__icon rating__icon--star fa fa-star-half"></i></label>
-                                <input class="rating__input" name="Q13-rating" id="Q13-rating2-15" value="1.5" type="radio">
-                                <label aria-label="2 stars" class="rating__label" for="Q13-rating2-20"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
-                                <input class="rating__input" name="Q13-rating" id="Q13-rating2-20" value="2" type="radio">
-                                <label aria-label="2.5 stars" class="rating__label rating__label--half" for="Q13-rating2-25"><i class="rating__icon rating__icon--star fa fa-star-half"></i></label>
-                                <input class="rating__input" name="Q13-rating" id="Q13-rating2-25" value="2.5" type="radio" checked>
-                                <label aria-label="3 stars" class="rating__label" for="Q13-rating2-30"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
-                                <input class="rating__input" name="Q13-rating" id="Q13-rating2-30" value="3" type="radio">
-                                <label aria-label="3.5 stars" class="rating__label rating__label--half" for="Q13-rating2-35"><i class="rating__icon rating__icon--star fa fa-star-half"></i></label>
-                                <input class="rating__input" name="Q13-rating" id="Q13-rating2-35" value="3.5" type="radio">
-                                <label aria-label="4 stars" class="rating__label" for="Q13-rating2-40"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
-                                <input class="rating__input" name="Q13-rating" id="Q13-rating2-40" value="4" type="radio">
-                                <label aria-label="4.5 stars" class="rating__label rating__label--half" for="Q13-rating2-45"><i class="rating__icon rating__icon--star fa fa-star-half"></i></label>
-                                <input class="rating__input" name="Q13-rating" id="Q13-rating2-45" value="4.5" type="radio">
-                                <label aria-label="5 stars" class="rating__label" for="Q13-rating2-50"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
-                                <input class="rating__input" name="Q13-rating" id="Q13-rating2-50" value="5" type="radio">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="input-section-5 row">
-                        <p class="s4-name col-lg-5 col-md col-sm">I feel benefits such as Insurance, Meal, Employee loans, etc. meet my needs.</p>
-                        <div class = "col-md col-sm" id="half-stars-example">
-                            <div class="rating-group">
-                                <input class="rating__input rating__input--none" name="Q14-rating" id="Q14-rating2-0" value="0" type="radio">
-                                <label aria-label="0 stars" class="rating__label" for="Q14-rating2-0">&nbsp;</label>
-                                <label aria-label="0.5 stars" class="rating__label rating__label--half" for="Q14-rating2-05"><i class="rating__icon rating__icon--star fa fa-star-half"></i></label>
-                                <input class="rating__input" name="Q14-rating" id="Q14-rating2-05" value="0.5" type="radio">
-                                <label aria-label="1 star" class="rating__label" for="Q14-rating2-10"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
-                                <input class="rating__input" name="Q14-rating" id="Q14-rating2-10" value="1" type="radio">
-                                <label aria-label="1.5 stars" class="rating__label rating__label--half" for="Q14-rating2-15"><i class="rating__icon rating__icon--star fa fa-star-half"></i></label>
-                                <input class="rating__input" name="Q14-rating" id="Q14-rating2-15" value="1.5" type="radio">
-                                <label aria-label="2 stars" class="rating__label" for="Q14-rating2-20"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
-                                <input class="rating__input" name="Q14-rating" id="Q14-rating2-20" value="2" type="radio">
-                                <label aria-label="2.5 stars" class="rating__label rating__label--half" for="Q14-rating2-25"><i class="rating__icon rating__icon--star fa fa-star-half"></i></label>
-                                <input class="rating__input" name="Q14-rating" id="Q14-rating2-25" value="2.5" type="radio" checked>
-                                <label aria-label="3 stars" class="rating__label" for="Q14-rating2-30"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
-                                <input class="rating__input" name="Q14-rating" id="Q14-rating2-30" value="3" type="radio">
-                                <label aria-label="3.5 stars" class="rating__label rating__label--half" for="Q14-rating2-35"><i class="rating__icon rating__icon--star fa fa-star-half"></i></label>
-                                <input class="rating__input" name="Q14-rating" id="Q14-rating2-35" value="3.5" type="radio">
-                                <label aria-label="4 stars" class="rating__label" for="Q14-rating2-40"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
-                                <input class="rating__input" name="Q14-rating" id="Q14-rating2-40" value="4" type="radio">
-                                <label aria-label="4.5 stars" class="rating__label rating__label--half" for="Q14-rating2-45"><i class="rating__icon rating__icon--star fa fa-star-half"></i></label>
-                                <input class="rating__input" name="Q14-rating" id="Q14-rating2-45" value="4.5" type="radio">
-                                <label aria-label="5 stars" class="rating__label" for="Q14-rating2-50"><i class="rating__icon rating__icon--star fa fa-star"></i></label>
-                                <input class="rating__input" name="Q14-rating" id="Q14-rating2-50" value="5" type="radio">
-                            </div>
+                        <p class="s4-name col-lg-5 col-md col-sm">I find that benefits such as insurance, meals, employee loans, etc., meet my needs well.</p>
+                        <div class = "input-range col-lg col-sm">
+                            <div class="range">
+                                <div class="sliderValue">
+                                  <span style="font-size: 50px;" class ="slider-span">10</span>
+                                </div>
+                                <div class="field">
+                                    <div class="value left">0</div>
+                                    <input type="range" min="0" max="10" value="5" steps="1" name = "Q14" class = "slider-input">
+                                    <div class="value right">10</div>
+                                </div>
+                            </div>    
                         </div>
                     </div>
                     <button class="btn btn-primary" type="submit" id = "proceedButton">Proceed</button>
                 </form>
             </div>
-        </div>  
+        </div>
+        <script>
+            for(i=0;i<4;i++){
+                const slideValue = document.getElementsByClassName("slider-span")[i];
+                const inputSlider = document.getElementsByClassName("slider-input")[i];
+                emoji_array=["😡","😠","😦","☹️","🙁","😐","🙂","😊","😄","😃","😍"];
+                slideValue.textContent = emoji_array[5];
+                inputSlider.oninput = (()=>{
+                let value = inputSlider.value;
+                slideValue.textContent = emoji_array[value];
+                console.log(value);
+                console.log(slideValue);
+                if(value==0){
+                    slideValue.style.left = "1%";    
+                }else{
+                    slideValue.style.left = (value*10) + "%";   
+                }
+                slideValue.classList.add("show");
+                });
+            }
+        </script>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
