--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         </div>
         <div class="form-items">
                 <div class = "input-section row">
-                <div class = "name col-lg-3 col-md"><label for = "name">Enter your Name</label></div>
+                <div class = "name col-lg-3 col-md"><label for = "name">Name: </label></div>
                     <input type="text" class="form-control col-lg col-sm" placeholder="Full Name" aria-label="Username" class = "username" id = "name" name = "name">
                 </div>
                     <div class = "input-section row">
-                    <div class = "name col-lg-3 col-md"><label>Which Company ?</label></div>
+                    <div class = "name col-lg-3 col-md"><label>Company ?</label></div>
                     <div class = "company ">
                     <div id = "select-company">
                         <label class="form-check-label" for="flexRadioDefault1">
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="input-section row">
-                <div class = "dept-name col-lg-3 col-md"><label for = "dept-name">Department/Team</label></div>
+                <div class = "dept-name col-lg-3 col-md"><label for = "select-dropdown">Department/Team</label></div>
                 <select class="form-select form-select col-sm " aria-label="Large select example" id = "select-dropdown" name = "Dept">
                     <option selected>--Select--</option>
                     <option value="1" name = "dept" value = "Sales">Sales</option>
@@ -73,8 +73,8 @@
                     </select>
                 </div>
                 <div class="input-section row">
-                    <div class = "year col-lg-3 col-md"><label for = "year">How long have you been with this company ?</label></div>
-                    <select class="form-select form-select col-sm " aria-label="Large select example" id = "select-dropdown">
+                    <div class = "year col-lg-3 col-md"><label for = "select-dropdown2">How long you have been associated with the company?</label></div>
+                    <select class="form-select form-select col-sm " aria-label="Large select example" id = "select-dropdown2">
                         <option selected>--Select--</option>
                         <option value="Less than 1 Year" name = "year">Less than 1 Year</option>
                         <option value="1 - 3 years" name = "year">1 - 3 years</option> // grameenext
