--- a/form3.html
+++ b/form3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="emoji.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,131 +15,94 @@
     <div class="container container-form-2">
         <div class="form-container col-xl-9 col-md">
         <form action="form4.html">
-        <div class="heading"><h4>Section 3 - Job Satisfaction</h4></div>
+        <div class="heading"><h4>
+            <!-- Section 3 -  -->
+            Job Satisfaction</h4></div>
                     <div class="input-section-3 row">
-                        <p class = "name col-lg-5 col-md col-sm">I feel my daily tasks are aligned with my skills and interests.</p>
-                        <div class="d-flex justify-content-around col-md col-sm">
-                        <div class="icon-select col-md-1">
-                        <label for = "Q5-Strongly-Disagree"><p class = "icons">&#128544;</p></label>
-                        <input class="form-check-input" type="radio" name="Q5" id="Q5-Strongly-Disagree" value = "Strongly-Disagree">
-                        <label for = "Q5-Strongly-Disagree" class = "emoji-text">Strongly Disagree</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q5-Partially-Disagree"><p class = "icons">&#128542;</p></label>
-                            <input class="form-check-input" type="radio" name="Q5" id="Q5-Partially-Disagree" value = "Partially-Disagree">
-                            <label for = "Q5-Partially-Disagree" class = "emoji-text">Partially Disagree</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q5-Neutral"><p class = "icons">&#128528;</p></label>
-                            <input class="form-check-input" type="radio" name="Q5" id="Q5-Neutral" value = "Neutral">
-                            <label for = "Q5-Neutral" class = "emoji-text">Neutral</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q5Partially-Agree"><p class = "icons">&#128522;</p></label>
-                            <input class="form-check-input" type="radio" name="Q5" id="Q5Partially-Agree" value = "Partially-Agree">
-                            <label for = "Q5Partially-Agree" class = "emoji-text">Partially Agree</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q5-Fully-Agree"><p class = "icons">&#128519;</p></label>
-                            <input class="form-check-input" type="radio" name="Q5" id="Q5-Fully-Agree" value = "Fully-Agree">
-                            <label for = "Q5-Fully-Agree" class = "emoji-text">Fully Agree</label>
-                        </div>
+                        <p class = "name col-lg-5 col-md col-sm">My daily tasks align well with my skills and interests.</p>
+                        <div class = "input-range col-lg col-sm">
+                            <div class="range">
+                                <div class="sliderValue">
+                                  <span style="font-size: 50px;" class ="slider-span">10</span>
+                                </div>
+                                <div class="field">
+                                    <div class="value left">0</div>
+                                    <input type="range" min="0" max="10" value="5" steps="1" name = "Q5" class = "slider-input">
+                                    <div class="value right">10</div>
+                                </div>
+                            </div>    
                         </div>
                     </div>
                     <div class="input-section-3 row">
-                        <p class = "name col-lg-5 col-md col-sm">I receive feedback on my work performance. </p>
-                        <div class="d-flex justify-content-around col-md col-sm">
-                        <div class="icon-select col-md-1">
-                        <label for = "Q6-Strongly-Disagree"><p class = "icons">&#128544;</p></label>
-                        <input class="form-check-input" type="radio" name="Q6" id="Q6-Strongly-Disagree" value = "Strongly-Disagree">
-                        <label for = "Q6-Strongly-Disagree" class = "emoji-text">Strongly Disagree</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q6-Partially-Disagree"><p class = "icons">&#128542;</p></label>
-                            <input class="form-check-input" type="radio" name="Q6" id="Q6-Partially-Disagree" value = "Partially-Disagree">
-                            <label for = "Q6-Partially-Disagree" class = "emoji-text">Partially Disagree</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q6-Neutral"><p class = "icons">&#128528;</p></label>
-                            <input class="form-check-input" type="radio" name="Q6" id="Q6-Neutral" value = "Neutral">
-                            <label for = "Q6-Neutral" class = "emoji-text">Neutral</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q6-Partially-Agree"><p class = "icons">&#128522;</p></label>
-                            <input class="form-check-input" type="radio" name="Q6" id="Q6-Partially-Agree" value = "Partially-Agree">
-                            <label for = "Q6-Partially-Agree" class = "emoji-text">Partially Agree</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q6-Fully-Agree"><p class = "icons">&#128519;</p></label>
-                            <input class="form-check-input" type="radio" name="Q6" id="Q6-Fully-Agree" value = "Fully-Agree">
-                            <label for = "Q6-Fully-Agree" class = "emoji-text">Fully Agree</label>
-                        </div>
+                        <p class = "name col-lg-5 col-md col-sm">I receive feedback on my performance at work.</p>
+                        <div class = "input-range col-lg col-sm">
+                            <div class="range">
+                                <div class="sliderValue">
+                                  <span style="font-size: 50px;" class ="slider-span">10</span>
+                                </div>
+                                <div class="field">
+                                    <div class="value left">0</div>
+                                    <input type="range" min="0" max="10" value="5" steps="1" name = "Q6" class = "slider-input">
+                                    <div class="value right">10</div>
+                                </div>
+                            </div>    
                         </div>
                     </div>
                     <div class="input-section-3 row">
-                        <p class = "name col-lg-5 col-md col-sm">I have opportunities for career and skill growth here.</p>
-                        <div class="d-flex justify-content-around col-md col-sm">
-                        <div class="icon-select col-md-1">
-                        <label for = "Q7-Strongly-Disagree"><p class = "icons">&#128544;</p></label>
-                        <input class="form-check-input" type="radio" name="Q7" id="Q7-Strongly-Disagree" value = "Strongly-Disagree">
-                        <label for = "Q7-Strongly-Disagree" class = "emoji-text">Strongly Disagree</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q7-Partially-Disagree"><p class = "icons">&#128542;</p></label>
-                            <input class="form-check-input" type="radio" name="Q7" id="Q7-Partially-Disagree" value = "Partially-Disagree">
-                            <label for = "Q7-Partially-Disagree" class = "emoji-text">Partially Disagree</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q7-Neutral"><p class = "icons">&#128528;</p></label>
-                            <input class="form-check-input" type="radio" name="Q7" id="Q7-Neutral" value = "Neutral>
-                            <label for = "Q7-Neutral" class = "emoji-text">Neutral</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q7-Partially-Agree"><p class = "icons">&#128522;</p></label>
-                            <input class="form-check-input" type="radio" name="Q7" id="Q7-Partially-Agree" value = "Partially-Agree">
-                            <label for = "Q7-Partially-Agree" class = "emoji-text">Partially Agree</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q7-Fully-Agree"><p class = "icons">&#128519;</p></label>
-                            <input class="form-check-input" type="radio" name="Q7" id="Q7-Fully-Agree" value = "Fully-Agree">
-                            <label for = "Q7-Fully-Agree" class = "emoji-text">Fully Agree</label>
-                        </div>
+                        <p class = "name col-lg-5 col-md col-sm">I have opportunities for career advancement and skill growth here.</p>
+                        <div class = "input-range col-lg col-sm">
+                            <div class="range">
+                                <div class="sliderValue">
+                                  <span style="font-size: 50px;" class ="slider-span">10</span>
+                                </div>
+                                <div class="field">
+                                    <div class="value left">0</div>
+                                    <input type="range" min="0" max="10" value="5" steps="1" name = "Q7" class = "slider-input">
+                                    <div class="value right">10</div>
+                                </div>
+                            </div>    
                         </div>
                     </div>
                     <div class="input-section-3 row">
-                        <p class = "name col-lg-5 col-md col-sm">I have daily task that are achievable by me within given time. </p>
-                        <div class="d-flex justify-content-around col-md col-sm">
-                        <div class="icon-select col-md-1">
-                        <label for = "Q8-Strongly-Disagree"><p class = "icons">&#128544;</p></label>
-                        <input class="form-check-input" type="radio" name="Q8" id="Q8-Strongly-Disagree" value = "Strongly-Disagree">
-                        <label for = "Q8-Strongly-Disagree" class = "emoji-text">Strongly Disagree</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q8-Partially-Disagree"><p class = "icons">&#128542;</p></label>
-                            <input class="form-check-input" type="radio" name="Q8" id="Q8-Partially-Disagree" value = "Partially-Disagree">
-                            <label for = "Q8-Partially-Disagree" class = "emoji-text">Partially Disagree</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q8-Neutral"><p class = "icons">&#128528;</p></label>
-                            <input class="form-check-input" type="radio" name="Q8" id="Q8-Neutral" value = "Neutral">
-                            <label for = "Q8-Neutral" class = "emoji-text">Neutral</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q8-Partially-Agree"><p class = "icons">&#128522;</p></label>
-                            <input class="form-check-input" type="radio" name="Q8" id="Q8-Partially-Agree" value = "Partially-Agree">
-                            <label for = "Q8-Partially-Agree" class = "emoji-text">Partially Agree</label>
-                        </div>
-                        <div class="icon-select col-md-1">
-                            <label for = "Q8-Fully-Agree"><p class = "icons">&#128519;</p></label>
-                            <input class="form-check-input" type="radio" name="Q8" id="Q8-Fully-Agree" value = "Fully-Agree">
-                            <label for = "Q8-Fully-Agree" class = "emoji-text">Fully Agree</label>
-                        </div>
+                        <p class = "name col-lg-5 col-md col-sm">My daily tasks are achievable within the given time.</p>
+                        <div class = "input-range col-lg col-sm">
+                            <div class="range">
+                                <div class="sliderValue">
+                                  <span style="font-size: 50px;" class ="slider-span">10</span>
+                                </div>
+                                <div class="field">
+                                    <div class="value left">0</div>
+                                    <input type="range" min="0" max="10" value="5" steps="1" name = "Q8" class = "slider-input">
+                                    <div class="value right">10</div>
+                                </div>
+                            </div>    
                         </div>
                     </div>
             <button class="btn btn-primary" type="submit" id = "proceedButton">Proceed</button>
             </form>
         </div>
     </div>
+    <script>
+        for(i=0;i<4;i++){
+            const slideValue = document.getElementsByClassName("slider-span")[i];
+            const inputSlider = document.getElementsByClassName("slider-input")[i];
+            emoji_array=["😡","😠","😦","☹️","🙁","😐","🙂","😊","😄","😃","😍"];
+            slideValue.textContent = emoji_array[5];
+            inputSlider.oninput = (()=>{
+            let value = inputSlider.value;
+            slideValue.textContent = emoji_array[value];
+            console.log(value);
+            console.log(slideValue);
+            if(value==0){
+                slideValue.style.left = "1%";    
+            }else{
+                slideValue.style.left = (value*10) + "%";   
+            }
+            slideValue.classList.add("show");
+            });
+        }
+
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
