--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="heading">
         <H1>Employee Satisfaction Survey</H1>
         <div class = 'opening-text'>
-        Thank you for taking the time to complete this employee satisfaction survey. Your feedback is important to us and will help us understand how we can improve the work environment and your overall experience at <b>NEXUS/GRAMEENEXT</b>. The survey is anonymous, so please feel free to provide honest responses.
+        Thank you for taking the time to complete this employee satisfaction survey. Your feedback is important to us and will help us understand how we can improve the work environment and your overall experience at <b>NEXUS/GRAMEENEXT</b>. Please feel free to provide honest responses.
         </div>
         <form action = "form2.html">
         <section>
@@ -34,7 +34,7 @@
                     <div class = "company ">
                     <div id = "select-company">
                         <label class="form-check-label" for="flexRadioDefault1">
-                            <img src = "./media/400-200 01.png" alt = "Nexus-logo" class="img-fluid" id = "nexus">
+                            <img src = "./media/400-200 01.png" alt = "Nexus-logo" class="img-fluid small" id = "nexus">
                         </label>
                         <input class="form-check-input" type="radio" name="companyName" id="flexRadioDefault1" value = "Nexus">
                     </div>
