--- a/form2.html
+++ b/form2.html
@@ -15,9 +15,8 @@
         <div class="container">
             <div class="form-container col-xl-10 col-md">
             <form action = "form3.html">
-            <div class="heading"><h4>
-                <!-- Section 2 -  -->
-                Work Environment</h4></div>
+            <!-- <div class="heading"><h4>Section 2 - Work Environment
+            </h4></div> -->
             <div class="form-items">
                 <div class = "input-section-2 row">
                     <p class="name col-lg-5 col-md">I am able to express my thoughts and ideas at work.</p>
