--- a/form4.html
+++ b/form4.html
@@ -16,9 +16,7 @@
         <div class="container">
             <div class="form-container col-xl-9 col-md">
                 <form action="form5.html">
-                <div class="heading"><h4>
-                    <!-- Section 4 -  -->
-                    Company Culture</h4></div>
+                <!-- <div class="heading"><h4>Section 4 - Company Culture</h4></div> -->
                     <div class="input-section-4 row">
                         <p class="s4-name col-lg-5 col-md col-sm">I feel a sense of belonging to the company.</p>
                         <div class = "input-range col-lg col-sm">
