--- a/form5.html
+++ b/form5.html
@@ -16,9 +16,7 @@
         <div class="container container-form-2">
             <div class="form-container col-xl-9 col-md">
             <form action="form6.html">
-                <div class="heading"><h4>
-                    <!-- Section 5  -->
-                    Compensation and Benefits</h4></div>
+                <!-- <div class="heading"><h4>Section 5 Compensation and Benefits</h4></div> -->
                     <div class="input-section-5 row">
                         <p class="s4-name col-lg-5 col-md col-sm">I am satisfied with my current salary and benefits.</p>
                             <div class = "input-range col-lg col-sm">
