--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <form action = "form2.html">
         <section>
-        <h4>Section 1</h4>
+        <!-- <h4>Section 1</h4> -->
         <h5>General Information</h5>
         </div>
         <div class="form-items">
