--- a/form3.html
+++ b/form3.html
@@ -15,9 +15,7 @@
     <div class="container container-form-2">
         <div class="form-container col-xl-9 col-md">
         <form action="form4.html">
-        <div class="heading"><h4>
-            <!-- Section 3 -  -->
-            Job Satisfaction</h4></div>
+        <!-- <div class="heading"><h4>Section 3 - Job Satisfaction</h4></div> -->
                     <div class="input-section-3 row">
                         <p class = "name col-lg-5 col-md col-sm">My daily tasks align well with my skills and interests.</p>
                         <div class = "input-range col-lg col-sm">
