--- a/form6.html
+++ b/form6.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="form-container col-xl-9 col-md">
             <form action="form7.html">
-            <div class="heading"><h4>Overall Satisfaction</h4></div>
+            <!-- <div class="heading"><h4>Overall Satisfaction</h4></div> -->
                 <div class="input-section-6 row">
                     <label for="floatingTextarea1" class = "col-lg-4 col-md"><p class = "name">Overall, how satisfied are you working at NEXUS / GRAMEENEXT ? </p></label>
                     <div class="form-floating col-lg-7 col-md">
